# texttokenizer

./: .gitignore  README.md  pyproject.toml
tests/: test_util.py
texttokenizer/: __init__.py  annotator.py  document.py  preprocessor.py  processor.py  token.py  util.py
